{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1189,
  "lineage": "84723454-e89e-01a7-a22b-53a32c22dad6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d897a868b2d4ccf8",
            "arn": "arn:aws:ec2:us-east-1:628599309261:elastic-ip/eipalloc-0d897a868b2d4ccf8",
            "association_id": "eipassoc-095cb3b050747480a",
            "domain": "vpc",
            "id": "eipalloc-0d897a868b2d4ccf8",
            "instance": "i-0ae39481b243857a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0507a0832f9425828",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-13-217-185-89.compute-1.amazonaws.com",
            "public_ip": "13.217.185.89",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stock_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-080c353f4798a202f",
            "arn": "arn:aws:ec2:us-east-1:628599309261:instance/i-0ae39481b243857a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae39481b243857a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0507a0832f9425828"
              }
            ],
            "primary_network_interface_id": "eni-0507a0832f9425828",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-13-217-185-89.compute-1.amazonaws.com",
            "public_ip": "13.217.185.89",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b525e9f4dcdc951",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0999e79c8adfd1110",
            "tags": {
              "Name": "WordPress EC2 Instance"
            },
            "tags_all": {
              "Name": "WordPress EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025274f5b9487262d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "i-0ae39481b243857a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.ec2_eip",
            "module.cognito.aws_cognito_user_pool.pool",
            "module.cognito.aws_cognito_user_pool_client.client",
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.rds.aws_db_instance.stock_rds",
            "module.s3.aws_s3_bucket.frontend",
            "module.s3.aws_s3_bucket_website_configuration.frontend_website",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg",
            "module.subnet_group.aws_db_subnet_group.stock_db_subnet_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.stock_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:security-group/sg-025274f5b9487262d",
            "description": "Security group for Stock EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025274f5b9487262d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stock_ec2_sg",
            "name_prefix": "",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e74c7a8e1814a497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "sg-025274f5b9487262d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:security-group/sg-061922296f22ac55a",
            "description": "Security group for Stock RDS instance",
            "egress": [],
            "id": "sg-061922296f22ac55a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025274f5b9487262d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "stock_rds_sg",
            "name_prefix": "",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e74c7a8e1814a497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "sg-061922296f22ac55a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stock_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:internet-gateway/igw-0c0988b49511e03aa",
            "id": "igw-0c0988b49511e03aa",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Internet Gateway"
            },
            "tags_all": {
              "Name": "Stock Internet Gateway"
            },
            "vpc_id": "vpc-0e74c7a8e1814a497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:route-table/rtb-0d8d7a4ae10ca4d79",
            "id": "rtb-0d8d7a4ae10ca4d79",
            "owner_id": "628599309261",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0988b49511e03aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stock Public Route Table"
            },
            "tags_all": {
              "Name": "Stock Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e74c7a8e1814a497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "rtb-0d8d7a4ae10ca4d79",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stock_igw",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00869630370bdb94f",
            "region": "us-east-1",
            "route_table_id": "rtb-0d8d7a4ae10ca4d79",
            "subnet_id": "subnet-0999e79c8adfd1110"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.stock_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:subnet/subnet-027aee0d2f42a1dfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027aee0d2f42a1dfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628599309261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Private Subnet"
            },
            "tags_all": {
              "Name": "Stock Private Subnet"
            },
            "vpc_id": "vpc-0e74c7a8e1814a497"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "subnet-027aee0d2f42a1dfc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:subnet/subnet-0999e79c8adfd1110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0999e79c8adfd1110",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628599309261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Public Subnet"
            },
            "tags_all": {
              "Name": "Stock Public Subnet"
            },
            "vpc_id": "vpc-0e74c7a8e1814a497"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "subnet-0999e79c8adfd1110",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stock_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:vpc/vpc-0e74c7a8e1814a497",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c54b859ccb6b4c7a",
            "default_route_table_id": "rtb-0b8cc6fa9339312c1",
            "default_security_group_id": "sg-024611f062e323551",
            "dhcp_options_id": "dopt-cfda63b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e74c7a8e1814a497",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8cc6fa9339312c1",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock VPC"
            },
            "tags_all": {
              "Name": "Stock VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "vpc-0e74c7a8e1814a497",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}